<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/administrador"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/clave"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repeatpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/repetir_clave"
        android:inputType="textPassword" />
<LinearLayout
    android:gravity="center"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/cancelar"
        android:textColor="@android:color/white" />
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/aceptar"
        android:textColor="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />
</LinearLayout>

</LinearLayout>