<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="macay.maceda.reloj.checador.UserPanelActivity">


    <android.support.constraint.ConstraintLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.529"
            android:layout_marginLeft="8dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/b_edit"
            android:layout_width="wrap_content"
            app:fabSize="mini"
            app:srcCompat="@drawable/lock"
            app:backgroundTint="@color/colorPrimary"
            android:tint="@android:color/white"
            app:rippleColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded" />
    </android.support.constraint.ConstraintLayout>



    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="#e7e7e7"
        android:gravity="center"
        android:text="@string/que_registraras"
        android:textColor="@color/colorPrimary"
        android:textSize="19.5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.CardView
            android:layout_marginVertical="5dp"
            android:id="@+id/cv"
            app:cardElevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_margin="@dimen/fab_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/ultima_actividad"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/checkin_tv"
                    android:textSize="@dimen/fab_margin"
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/checkout_tv"
                    android:textSize="@dimen/fab_margin"
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/breakout_tv"
                    android:textSize="@dimen/fab_margin"
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/breakin_tv"
                    android:textSize="@dimen/fab_margin"
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/inicio_trabajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/fab_margin"
            app:cardCornerRadius="5dp"
            app:cardElevation="@dimen/fab_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/working_button"
                    android:clickable="false"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:background="@drawable/power"
                    android:backgroundTint="#11ff00"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/textViewin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/comienzo_trabajo" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/regreso_trabajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/fab_margin"
            android:visibility="gone"
            app:cardCornerRadius="5dp"
            app:cardElevation="@dimen/fab_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/workout_button"
                    android:clickable="false"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/back"
                    android:backgroundTint="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/de_vuelta_trabajo" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/salida_trabajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/fab_margin"
            android:visibility="gone"
            app:cardCornerRadius="5dp"
            app:cardElevation="@dimen/fab_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:orientation="vertical">

                <ImageButton
                    android:clickable="false"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/exit"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/salida" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
